<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Potato</string>
    <string name="action_settings">Settings</string>
    <string name="String_Welcome">WELCOME</string>
    <string name="String_Register">Register</string>
    <string name="String_Login">Tap to Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="String_Log">Login</string>
    <string name="title_activity_success">SuccessActivity</string>
    <string name="String_Username">Username:</string>
    <string name="String_Password">Password:</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="String_NewUser">Welcome New User</string>
    <string name="String_NewUserName">Username:</string>
    <string name="String_NewPassword">Password:</string>
    <string name="String_CreateAccount">Create Account</string>
    <string name="String_ConfirmPassword">Confirm Password:</string>
    <string name="String_AccountList"></string>
    <string name="NewAccountName"></string>
    <string name="String_NewAccountName"></string>
    <string name="String_AccountName">Enter Account Name</string>
    <string name="String_welcome">Welcome to your profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="title_activity_success_activity2">SuccessActivity2</string>
    <string name="CreateNewAccount">Create New Account</string>
    <string name="String_CreateNewAccount">Create New Account</string>
    <string name="String_Cancel">Cancel</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_accounts">AccountsActivity</string>
    <string name="title_activity_transaction">TransactionActivity</string>
    <string name="title_activity_gen_report">GenReportActivity</string>
    <string name="title_activity_date_range_selection">MainActivity</string>
    <string name="title_activity_date_selection">DateSelectionActivity</string>

</resources>
