<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/baby"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="75dp"
        android:text="@string/String_NewUserName"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/dayEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/categoryEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/dayEntry"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/String_CreateAccount"
        android:textColor="#ffffff"
        android:onClick="onClickRegisterNewUser"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/String_NewUser"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/amountEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/categoryEntry"
        android:layout_alignRight="@+id/categoryEntry"
        android:layout_alignTop="@+id/textView4"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="42dp"
        android:layout_toLeftOf="@+id/categoryEntry"
        android:text="@string/String_NewPassword"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categoryEntry"
        android:layout_marginTop="24dp"
        android:layout_toLeftOf="@+id/amountEntry"
        android:text="@string/String_ConfirmPassword"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

</RelativeLayout>
